--- a/pom.xml
+++ b/pom.xml
@@ -64,6 +64,15 @@
     <artifactId>spring-boot-starter-data-jpa</artifactId>
 </dependency>
 
+<!-- jjwt-->
+
+<dependency>
+  <groupId>io.jsonwebtoken</groupId>
+  <artifactId>jjwt-jackson</artifactId>
+  <version>0.11.5</version> <!-- Lub inna odpowiednia wersja -->
+</dependency>
+
+
 
 	<!-- tag::devTools[] -->
     <dependency>
