--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,8 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
 spring.datasource.username=postgres
 spring.datasource.password=1234
 spring.jpa.show-sql=true
+
+jwt.exp=240000
+jwt.refresh.exp = 240000
+
+
