--- a/pom.xml
+++ b/pom.xml
@@ -83,6 +83,39 @@
 </dependency>
 
 
+<!-- znalazlem to gdzie ???-->
+
+
+
+
+<dependency>
+  <groupId>org.flywaydb</groupId>
+  <artifactId>flyway-core</artifactId>
+</dependency>
+
+<dependency>
+  <groupId>org.springframework.boot</groupId>
+  <artifactId>spring-boot-starter-validation</artifactId>
+</dependency>
+
+<dependency>
+  <groupId>jakarta.mail</groupId>
+  <artifactId>jakarta.mail-api</artifactId>
+  <version>2.1.0</version>
+</dependency>
+<dependency>
+  <groupId>org.eclipse.angus</groupId>
+  <artifactId>jakarta.mail</artifactId>
+  <version>1.0.0</version>
+</dependency>
+
+
+
+
+
+
+
+
 
 	<!-- tag::devTools[] -->
     <dependency>
@@ -108,7 +141,7 @@
     <dependency>
       <groupId>org.postgresql</groupId>
       <artifactId>postgresql</artifactId>
-      <version>42.5.4</version> <!-- Lub inna odpowiednia wersja -->
+      <scope>runtime</scope>
   </dependency>
   
 
